--- a/HTML_ElementParser/HTML_ElementParser/HTML_ElementParser.csproj
+++ b/HTML_ElementParser/HTML_ElementParser/HTML_ElementParser.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.20.0" />
+  </ItemGroup>
+
 </Project>
